--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,8 @@
   <properties>
     <!--spring核心包 版本号-->
     <spring.version>4.3.7.RELEASE</spring.version>
-    <!---->
+    <!--单元测试包 版本号-->
+    <junit.version>3.8.1</junit.version>
 
   </properties>
 
@@ -27,13 +28,22 @@
       <version>${spring.version}</version>
     </dependency>
 
-
+    <!--单元测试-->
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>3.8.1</version>
+      <version>${junit.version}</version>
       <scope>test</scope>
     </dependency>
+
+    <dependency>
+      <groupId></groupId>
+      <artifactId></artifactId>
+    </dependency>
+
+
+
+
 
 
   </dependencies>
