--- a/pom.xml
+++ b/pom.xml
@@ -14,36 +14,193 @@
     <spring.version>4.3.7.RELEASE</spring.version>
     <!--单元测试包 版本号-->
     <junit.version>3.8.1</junit.version>
+    <!-- mybatis 版本号 -->
+    <mybatis.version>3.2.6</mybatis.version>
+    <!--mybatis与spring整合包 版本号-->
+    <mybatis-spring.version>1.3.0</mybatis-spring.version>
+    <!--mysql数据库连接包 版本号-->
+    <mysql-connector.version>5.1.30</mysql-connector.version>
+    <!--数据库连接池dbcp管理包 版本号-->
+    <commons-dbcp.version>1.2.2</commons-dbcp.version>
+    <!--java发送邮件管理包 版本号-->
+    <java-email.version>1.4</java-email.version>
+    <!--slf4j日志文件管理包 版本号-->
+    <slf4j.version>1.7.7</slf4j.version>
+    <!-- log4j日志文件管理包 版本号 -->
+    <log4j.version>1.2.17</log4j.version>
+    <!--jstl标签类包 版本号-->
+    <jstl.version>1.2</jstl.version>
+    <!--jackson版本号-->
+    <jackson.version>2.7.1</jackson.version>
+    <!--json处理包 版本号-->
+    <alibaba-fastjson.version>1.1.41</alibaba-fastjson.version>
 
   </properties>
 
 
 
   <dependencies>
+    <!--单元测试 start-->
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>${junit.version}</version>
+      <!-- 表示开发的时候引入，发布的时候不会加载此包 -->
+      <scope>test</scope>
+    </dependency>
+    <!--单元测试 end-->
 
-    <!--spring 核心包-->
+    <!-- spring核心包 start -->
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-core</artifactId>
       <version>${spring.version}</version>
     </dependency>
-    <!--单元测试-->
+
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>${junit.version}</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId></groupId>
-      <artifactId></artifactId>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-web</artifactId>
+      <version>${spring.version}</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-oxm</artifactId>
+      <version>${spring.version}</version>
+    </dependency>
 
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-tx</artifactId>
+      <version>${spring.version}</version>
+    </dependency>
 
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-jdbc</artifactId>
+      <version>${spring.version}</version>
+    </dependency>
 
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-webmvc</artifactId>
+      <version>${spring.version}</version>
+    </dependency>
 
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-aop</artifactId>
+      <version>${spring.version}</version>
+    </dependency>
 
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-context-support</artifactId>
+      <version>${spring.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-test</artifactId>
+      <version>${spring.version}</version>
+    </dependency>
+
+    <!-- spring核心包 end -->
+
+    <!--mybatis核心包 start-->
+    <dependency>
+      <groupId>org.mybatis</groupId>
+      <artifactId>mybatis</artifactId>
+      <version>${mybatis.version}</version>
+    </dependency>
+    <!--mybatis核心包 end-->
+
+    <!--mybatis与spring整合包 start-->
+    <dependency>
+      <groupId>org.mybatis</groupId>
+      <artifactId>mybatis-spring</artifactId>
+      <version>${mybatis-spring.version}</version>
+    </dependency>
+    <!--mybatis与spring整合包 end-->
+
+    <!--java发送邮件管理包  start-->
+    <dependency>
+      <groupId>javax.mail</groupId>
+      <artifactId>mail</artifactId>
+      <version>${java-email.version}</version>
+    </dependency>
+    <!--java发送邮件管理包  end-->
+
+    <!-- Mysql数据库连接jar包 start -->
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>${mysql-connector.version}</version>
+    </dependency>
+    <!-- Mysql数据库连接jar包 end -->
+
+    <!-- 导入dbcp的jar包，用来在applicationContext.xml中配置数据库 -->
+    <dependency>
+      <groupId>commons-dbcp</groupId>
+      <artifactId>commons-dbcp</artifactId>
+      <version>${commons-dbcp.version}</version>
+    </dependency>
+
+    <!-- jstl标签类jar包   start -->
+    <dependency>
+      <groupId>jstl</groupId>
+      <artifactId>jstl</artifactId>
+      <version>${jstl.version}</version>
+    </dependency>
+    <!-- jstl标签类jar包   end -->
+
+    <!-- log4j日志文件管理包 start -->
+    <dependency>
+      <groupId>log4j</groupId>
+      <artifactId>log4j</artifactId>
+      <version>${log4j.version}</version>
+    </dependency>
+    <!-- log4j日志文件管理包 end -->
+
+    <!--slf4j日志jar包 start-->
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>${slf4j.version}</version>
+    </dependency>
+
+    <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-log4j12</artifactId>
+        <version>${slf4j.version}</version>
+    </dependency>
+    <!--slf4j日志jar包 end-->
+
+    <!-- Json处理包 start -->
+    <dependency>
+      <groupId>com.alibaba</groupId>
+      <artifactId>fastjson</artifactId>
+      <version>${alibaba-fastjson.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-core</artifactId>
+      <version>${jackson.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>${jackson.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-annotations</artifactId>
+      <version>${jackson.version}</version>
+    </dependency>
+    <!-- Json处理包 end -->
   </dependencies>
   <build>
     <finalName>zhulingfeng</finalName>
