--- a/pom.xml
+++ b/pom.xml
@@ -1,208 +1,268 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.xykj</groupId>
-  <artifactId>zhulingfeng</artifactId>
-  <packaging>war</packaging>
-  <version>1.0-SNAPSHOT</version>
-  <name>zhulingfeng Maven Webapp</name>
-  <url>http://maven.apache.org</url>
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>com.xykj</groupId>
+    <artifactId>zhulingfeng</artifactId>
+    <packaging>war</packaging>
+    <version>1.0-SNAPSHOT</version>
+    <name>zhulingfeng Maven Webapp</name>
+    <url>http://maven.apache.org</url>
 
 
-  <properties>
-    <!--spring核心包 版本号-->
-    <spring.version>4.3.7.RELEASE</spring.version>
-    <!--单元测试包 版本号-->
-    <junit.version>3.8.1</junit.version>
-    <!-- mybatis 版本号 -->
-    <mybatis.version>3.2.6</mybatis.version>
-    <!--mybatis与spring整合包 版本号-->
-    <mybatis-spring.version>1.3.0</mybatis-spring.version>
-    <!--mysql数据库连接包 版本号-->
-    <mysql-connector.version>5.1.30</mysql-connector.version>
-    <!--数据库连接池dbcp管理包 版本号-->
-    <commons-dbcp.version>1.2.2</commons-dbcp.version>
-    <!--java发送邮件管理包 版本号-->
-    <java-email.version>1.4</java-email.version>
-    <!--slf4j日志文件管理包 版本号-->
-    <slf4j.version>1.7.7</slf4j.version>
-    <!-- log4j日志文件管理包 版本号 -->
-    <log4j.version>1.2.17</log4j.version>
-    <!--jstl标签类包 版本号-->
-    <jstl.version>1.2</jstl.version>
-    <!--jackson版本号-->
-    <jackson.version>2.7.1</jackson.version>
-    <!--json处理包 版本号-->
-    <alibaba-fastjson.version>1.1.41</alibaba-fastjson.version>
+    <properties>
 
-  </properties>
+        <!-- java ee jar包 版本号 -->
+        <javaee.version>7.0</javaee.version>
+        <!--Apache 文件上传组件包 版本号-->
+        <commons-fileupload.version>1.3.1</commons-fileupload.version>
+        <!--IO流工具类管理包 版本号-->
+        <commons-io.version>2.4</commons-io.version>
+        <!--Apache 编码解码工具类管理包 版本号-->
+        <commons-codec.version>1.9</commons-codec.version>
+        <!--spring核心包 版本号-->
+        <spring.version>4.3.7.RELEASE</spring.version>
+        <!--单元测试包 版本号-->
+        <junit.version>3.8.1</junit.version>
+        <!-- mybatis 版本号 -->
+        <mybatis.version>3.2.6</mybatis.version>
+        <!--mybatis与spring整合包 版本号-->
+        <mybatis-spring.version>1.3.0</mybatis-spring.version>
+        <!--mysql数据库连接包 版本号-->
+        <mysql-connector.version>5.1.30</mysql-connector.version>
+        <!--数据库连接池dbcp管理包 版本号-->
+        <commons-dbcp.version>1.2.2</commons-dbcp.version>
+        <!--java发送邮件管理包 版本号-->
+        <java-email.version>1.4</java-email.version>
+        <!--slf4j日志文件管理包 版本号-->
+        <slf4j.version>1.7.7</slf4j.version>
+        <!-- log4j日志文件管理包 版本号 -->
+        <log4j.version>1.2.17</log4j.version>
+        <!--jstl标签类包 版本号-->
+        <jstl.version>1.2</jstl.version>
+        <!--jackson版本号-->
+        <jackson.version>2.7.1</jackson.version>
+        <!--json处理包 版本号-->
+        <alibaba-fastjson.version>1.1.41</alibaba-fastjson.version>
+
+    </properties>
 
 
+    <dependencies>
+        <!--单元测试 start-->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>${junit.version}</version>
+            <!-- 表示开发的时候引入，发布的时候不会加载此包 -->
+            <scope>test</scope>
+        </dependency>
+        <!--单元测试 end-->
 
-  <dependencies>
-    <!--单元测试 start-->
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>${junit.version}</version>
-      <!-- 表示开发的时候引入，发布的时候不会加载此包 -->
-      <scope>test</scope>
-    </dependency>
-    <!--单元测试 end-->
+        <!-- java ee jar包 start -->
+        <dependency>
+            <groupId>javax</groupId>
+            <artifactId>javaee-api</artifactId>
+            <version>${javaee.version}</version>
+        </dependency>
+        <!-- java ee jar包 end -->
 
-    <!-- spring核心包 start -->
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-core</artifactId>
-      <version>${spring.version}</version>
-    </dependency>
 
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-web</artifactId>
-      <version>${spring.version}</version>
-    </dependency>
+        <!-- spring核心包 start -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
 
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-oxm</artifactId>
-      <version>${spring.version}</version>
-    </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
 
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-tx</artifactId>
-      <version>${spring.version}</version>
-    </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-oxm</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
 
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-jdbc</artifactId>
-      <version>${spring.version}</version>
-    </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-tx</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
 
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-webmvc</artifactId>
-      <version>${spring.version}</version>
-    </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
 
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-aop</artifactId>
-      <version>${spring.version}</version>
-    </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
 
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-context-support</artifactId>
-      <version>${spring.version}</version>
-    </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-aop</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
 
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-test</artifactId>
-      <version>${spring.version}</version>
-    </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context-support</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
 
-    <!-- spring核心包 end -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
 
-    <!--mybatis核心包 start-->
-    <dependency>
-      <groupId>org.mybatis</groupId>
-      <artifactId>mybatis</artifactId>
-      <version>${mybatis.version}</version>
-    </dependency>
-    <!--mybatis核心包 end-->
+        <!-- spring核心包 end -->
 
-    <!--mybatis与spring整合包 start-->
-    <dependency>
-      <groupId>org.mybatis</groupId>
-      <artifactId>mybatis-spring</artifactId>
-      <version>${mybatis-spring.version}</version>
-    </dependency>
-    <!--mybatis与spring整合包 end-->
+        <!--mybatis核心包 start-->
+        <dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis</artifactId>
+            <version>${mybatis.version}</version>
+        </dependency>
+        <!--mybatis核心包 end-->
 
-    <!--java发送邮件管理包  start-->
-    <dependency>
-      <groupId>javax.mail</groupId>
-      <artifactId>mail</artifactId>
-      <version>${java-email.version}</version>
-    </dependency>
-    <!--java发送邮件管理包  end-->
+        <!--mybatis与spring整合包 start-->
+        <dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis-spring</artifactId>
+            <version>${mybatis-spring.version}</version>
+        </dependency>
+        <!--mybatis与spring整合包 end-->
 
-    <!-- Mysql数据库连接jar包 start -->
-    <dependency>
-      <groupId>mysql</groupId>
-      <artifactId>mysql-connector-java</artifactId>
-      <version>${mysql-connector.version}</version>
-    </dependency>
-    <!-- Mysql数据库连接jar包 end -->
+        <!--java发送邮件管理包  start-->
+        <dependency>
+            <groupId>javax.mail</groupId>
+            <artifactId>mail</artifactId>
+            <version>${java-email.version}</version>
+        </dependency>
+        <!--java发送邮件管理包  end-->
 
-    <!-- 导入dbcp的jar包，用来在applicationContext.xml中配置数据库 -->
-    <dependency>
-      <groupId>commons-dbcp</groupId>
-      <artifactId>commons-dbcp</artifactId>
-      <version>${commons-dbcp.version}</version>
-    </dependency>
+        <!-- Mysql数据库连接jar包 start -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>${mysql-connector.version}</version>
+        </dependency>
+        <!-- Mysql数据库连接jar包 end -->
 
-    <!-- jstl标签类jar包   start -->
-    <dependency>
-      <groupId>jstl</groupId>
-      <artifactId>jstl</artifactId>
-      <version>${jstl.version}</version>
-    </dependency>
-    <!-- jstl标签类jar包   end -->
+        <!-- 导入dbcp的jar包，用来在applicationContext.xml中配置数据库 -->
+        <dependency>
+            <groupId>commons-dbcp</groupId>
+            <artifactId>commons-dbcp</artifactId>
+            <version>${commons-dbcp.version}</version>
+        </dependency>
 
-    <!-- log4j日志文件管理包 start -->
-    <dependency>
-      <groupId>log4j</groupId>
-      <artifactId>log4j</artifactId>
-      <version>${log4j.version}</version>
-    </dependency>
-    <!-- log4j日志文件管理包 end -->
+        <!-- jstl标签类jar包   start -->
+        <dependency>
+            <groupId>jstl</groupId>
+            <artifactId>jstl</artifactId>
+            <version>${jstl.version}</version>
+        </dependency>
+        <!-- jstl标签类jar包   end -->
 
-    <!--slf4j日志jar包 start-->
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-api</artifactId>
-      <version>${slf4j.version}</version>
-    </dependency>
+        <!-- log4j日志文件管理包 start -->
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>${log4j.version}</version>
+        </dependency>
+        <!-- log4j日志文件管理包 end -->
 
-    <dependency>
-        <groupId>org.slf4j</groupId>
-        <artifactId>slf4j-log4j12</artifactId>
-        <version>${slf4j.version}</version>
-    </dependency>
-    <!--slf4j日志jar包 end-->
+        <!--slf4j日志jar包 start-->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${slf4j.version}</version>
+        </dependency>
 
-    <!-- Json处理包 start -->
-    <dependency>
-      <groupId>com.alibaba</groupId>
-      <artifactId>fastjson</artifactId>
-      <version>${alibaba-fastjson.version}</version>
-    </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>${slf4j.version}</version>
+        </dependency>
+        <!--slf4j日志jar包 end-->
 
-    <dependency>
-      <groupId>com.fasterxml.jackson.core</groupId>
-      <artifactId>jackson-core</artifactId>
-      <version>${jackson.version}</version>
-    </dependency>
+        <!-- Json处理包 start -->
 
-    <dependency>
-      <groupId>com.fasterxml.jackson.core</groupId>
-      <artifactId>jackson-databind</artifactId>
-      <version>${jackson.version}</version>
-    </dependency>
+        <!--阿里Json数据处理包 start -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>${alibaba-fastjson.version}</version>
+        </dependency>
+        <!--阿里Json数据处理包 end -->
 
-    <dependency>
-      <groupId>com.fasterxml.jackson.core</groupId>
-      <artifactId>jackson-annotations</artifactId>
-      <version>${jackson.version}</version>
-    </dependency>
-    <!-- Json处理包 end -->
-  </dependencies>
-  <build>
-    <finalName>zhulingfeng</finalName>
-  </build>
+        <!--Json数据处理核心包 start-->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+        <!--Json数据处理核心包 end-->
+
+        <!--Json数据绑定包 start-->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+        <!--Json数据绑定包 end-->
+
+        <!--Json注解包 start-->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+        <!--Json注解包 end-->
+
+        <!--java处理json数据的类库包 start-->
+        <dependency>
+            <groupId>org.codehaus.jackson</groupId>
+            <artifactId>jackson-mapper-asl</artifactId>
+            <version>1.9.13</version>
+        </dependency>
+        <!--java处理json数据的类库包 end-->
+
+
+        <!-- Json处理包 end -->
+
+        <!-- 上传组件包 -->
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>${commons-fileupload.version}</version>
+        </dependency>
+
+        <!--io流工具类库管理包 start -->
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>${commons-io.version}</version>
+        </dependency>
+        <!--io流工具类库管理包 end -->
+
+
+        <!--Apache 编码解码工具类管理包 start-->
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>${commons-codec.version}</version>
+        </dependency>
+        <!--Apache 编码解码工具类管理包 end-->
+    </dependencies>
+    <build>
+        <finalName>zhulingfeng</finalName>
+    </build>
 </project>
